# MoConVQ

./: .gitattributes  .gitignore  README.md  base.bvh  requirements.yml  setup.cmd  setup.py  track.bvh
Data/Misc/: smpl-world-default.json  world_stable.json
Data/Parameters/: bigdata.yml
MoConVQCore/Env/: vclode_track_env.py
MoConVQCore/Model/: MoConVQ.py  causal_transformer.py  convvq.py  cross_trans_ori_fixsum.py  modules.py  rq_trans_fixsum.py  trajectory_collection.py  world_model.py
MoConVQCore/Utils/: diff_quat.py  gaussian_diffusion_old.py  index_counter.py  misc.py  motion_dataset.py  motion_utils.py  mpi_utils.py  pytorch_utils.py  replay_buffer.py
ModifyODESrc/: VclSimuBackend.pyi  VclSimuBackend.pyx  readme.md
ModifyODESrc/src/: dampedstep.cpp  dampedstep.h  dampedstepcommon.cpp  dampedstepwithinfo.cpp  step_resort_joints.cpp
ModifyODESrc/stubs/: VclSimuBackend.pyi
Script/: build_motion_dataset.py  clean_data.py  decode_token.py  gradio_app.py  moconvq_builder.py  script_utils.py  text2motion_generation.py  tokenize_motion.py  track_something.py  unconditional_generation.py
diff-quaternion/: .gitignore  CMakeLists.txt  readme.md  setup.py
diff-quaternion/Common/: Common.cpp  Common.h
diff-quaternion/CppRotation/: CMakeLists.txt  Config.cpp  Config.h  QuaternionWithGrad.cpp.bak  RotationCpp.cpp  RotationCppBatch.hpp  RotationCppBatchWrapper.hpp  RotationCppSingle.hpp  RotationCppSingleWrapper.hpp  RotationNumpy.cpp  TestOpenMP.cpp  setup.py
diff-quaternion/CudaRotation/: CMakeLists.txt  CppCudaWrapper.cu  CppCudaWrapper.cuh  CudaConfig.cu  CudaConfig.h  DiffRotation.cuh  DiffRotationInterface.cpp  DiffRotationInterface.h  Test.py  (+4 more)
stubs/: VclSimuBackend.pyi
(+9 files in other folders)
